deployments/infrastructure/observability/victoria-metrics-k8s-stack/vmsingle-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vmsingle-basic-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: prometheus-basic-auth
