deployments/infrastructure/observability/victoria-metrics-k8s-stack/vmsingle-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmsingle-remote-write
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "prometheus.talos-cluster.local.obleey.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/write
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: vmsingle-basic-auth
      backendRefs:
        - name: vmsingle-vm
          port: 8429
